# FBW_Control_Pico

./: CMakeLists.txt
Stream_data/: Accel_Stream.cpp  CMakeLists.txt  Magnetometer_Stream.cpp
Test_Scripts/: CMakeLists.txt  Madgwick_Test.cpp
libs/: CMakeLists.txt
libs/Attitude/: Attitude.cpp  Attitude.h  CMakeLists.txt
libs/MPU9250/: CMakeLists.txt  MPU9250.cpp  MPU9250.h
libs/Madgwick/: CMakeLists.txt  MadgwickAHRS.cpp  MadgwickAHRS.h
libs/Quaternion/: CMakeLists.txt  Quaternion.cpp  Quaternion.h
libs/Vector/: Vector.h
src/: CMakeLists.txt  Calibration.cpp  main.cpp
